--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,7 +7,7 @@ on:
   pull_request:
     branches:
       - main
-
+      
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -19,18 +19,17 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
-      - name: Build Docker Image
+      - name: Build and Push Docker Image
         run: |
           docker build -t nextjs-app .
-          docker save nextjs-app -o nextjs-app.tar  # Save Docker image as a tar file
-
+      
       - name: Copy Docker Image to EC2
         uses: appleboy/scp-action@v0.1.4
         with:
           host: ${{ secrets.AWS_HOST }}
           username: ${{ secrets.AWS_USERNAME }}
           key: ${{ secrets.AWS_SSH_KEY }}
-          source: "nextjs-app.tar"
+          source: "docker-compose.yml"
           target: "/home/ubuntu"
 
       - name: SSH into EC2 and Deploy
@@ -42,5 +41,4 @@ jobs:
           script: |
             sudo docker stop nextjs-app || true
             sudo docker rm nextjs-app || true
-            sudo docker load -i /home/ubuntu/nextjs-app.tar  # Load Docker image from tar file
             sudo docker run -d -p 3000:3000 --name nextjs-app nextjs-app
