--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,17 +19,18 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
-      - name: Build and Push Docker Image
+      - name: Build Docker Image
         run: |
           docker build -t nextjs-app .
-      
+          docker save nextjs-app -o nextjs-app.tar  # Save image as a .tar file
+
       - name: Copy Docker Image to EC2
         uses: appleboy/scp-action@v0.1.4
         with:
           host: ${{ secrets.AWS_HOST }}
           username: ${{ secrets.AWS_USERNAME }}
           key: ${{ secrets.AWS_SSH_KEY }}
-          source: "docker-compose.yml"
+          source: "nextjs-app.tar"
           target: "/home/ubuntu"
 
       - name: SSH into EC2 and Deploy
@@ -41,4 +42,5 @@ jobs:
           script: |
             sudo docker stop nextjs-app || true
             sudo docker rm nextjs-app || true
+            sudo docker load -i /home/ubuntu/nextjs-app.tar  # Load image from tar file
             sudo docker run -d -p 3000:3000 --name nextjs-app nextjs-app
